--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -3,7 +3,8 @@ on:
   schedule:
     # Runs every hour
     - cron: '0 * * * *'
-  workflow_dispatch:
+  push:
+    branches: [ master ]
 
 jobs:
   update:
